--- a/BookStoreManager/BookStoreManager.csproj
+++ b/BookStoreManager/BookStoreManager.csproj
@@ -6,8 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Manager\" />
     <Folder Include="Interface\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BookStoreRepository\BookStoreRepository.csproj" />
+    <ProjectReference Include="..\BookStore_App\BookStore_App.csproj" />
   </ItemGroup>
 
 </Project>
