--- a/BookStoreModel/BookStoreModel.csproj
+++ b/BookStoreModel/BookStoreModel.csproj
@@ -9,4 +9,8 @@
     <Folder Include="NewFolder\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BookStore_App\BookStore_App.csproj" />
+  </ItemGroup>
+
 </Project>
