--- a/BookStoreRepository/BookStoreRepository.csproj
+++ b/BookStoreRepository/BookStoreRepository.csproj
@@ -7,7 +7,15 @@
 
   <ItemGroup>
     <Folder Include="Interface\" />
-    <Folder Include="Repository\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BookStoreModel\BookStoreModel.csproj" />
   </ItemGroup>
 
 </Project>
