--- a/BookStore_App/appsettings.json
+++ b/BookStore_App/appsettings.json
@@ -8,8 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BookStoreDb": "server=(LocalDb)\\localdb;database=BookStore; Integrated Security=true",
-    "providerName": "System.Data.SqlClient"
+    "BookStoreDb": "server=(LocalDb)\\localdb;database=BookStore; Integrated Security=true"
   },
   "Access-Control-Allow-Origin": "*",
   "Access-Control-Allow-Methods": "GET,POST,OPTIONS,DELETE,PUT"
