forget password api  added

--- a/BookStore_App/appsettings.json
+++ b/BookStore_App/appsettings.json
@@ -11,6 +11,10 @@
     "BookStoreDb": "server=(LocalDb)\\localdb;database=BookStore; Integrated Security=true"
   },
   "Access-Control-Allow-Origin": "*",
-  "Access-Control-Allow-Methods": "GET,POST,OPTIONS,DELETE,PUT"
+  "Access-Control-Allow-Methods": "GET,POST,OPTIONS,DELETE,PUT",
+  "Credentials": {
+    "Email": "ranig1029@gmail.com",
+    "Password": "suruchi"
 
+  }
 }
