forget password api modified

--- a/BookStore_App/appsettings.json
+++ b/BookStore_App/appsettings.json
@@ -14,7 +14,7 @@
   "Access-Control-Allow-Methods": "GET,POST,OPTIONS,DELETE,PUT",
   "Credentials": {
     "Email": "ranig1029@gmail.com",
-    "Password": "suruchi"
+    "Password": "suruchi1995"
 
   }
 }
