[rani]signup,login stored procedure modified

--- a/BookStoreRepository/BookStoreRepository.csproj
+++ b/BookStoreRepository/BookStoreRepository.csproj
@@ -6,7 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Interface\" />
+    <Compile Remove="Interface\**" />
+    <EmbeddedResource Remove="Interface\**" />
+    <None Remove="Interface\**" />
   </ItemGroup>
 
   <ItemGroup>
